kubernetes/main/apps/database/dragonfly/cluster/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-allow
  namespace: database
spec:
  podSelector:
    matchLabels:
      app: dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
  ingress:
    # Allow Prometheus metrics scraping
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - protocol: TCP
          port: 9999
    # Allow all namespaces to communicate on port 6379
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 6379
